# mcp-ui-explorer

./: .flake8  .gitignore  LICENSE  MACRO_TOOLS.md  MANIFEST.in  Makefile  QUICK_START.md  README.md  README_MCP_UI_EXPLORER.md  TESTING.md  config_examples.md  play_macro.bat  play_macro.py  pyproject.toml  pytest.ini  record_macro.bat  record_macro.py  requirements.txt  setup.py  test_different_areas.py  test_firefox_detection.py  test_modular_structure.py  updated_schema.md
.github/workflows/: ci.yml
.roo/: system-prompt-computer-use
scripts/: run_tests.py
src/: mcp_ui_explorer.py
src/mcp_ui_explorer/: __init__.py  __main__.py  hierarchical_ui_explorer.py  mcp_ui_explorer.py  ui_hierarchy_click.py
src/mcp_ui_explorer/config/: __init__.py  settings.py
src/mcp_ui_explorer/core/: __init__.py  actions.py  tracking.py  ui_explorer.py
src/mcp_ui_explorer/models/: __init__.py  enums.py  inputs.py
src/mcp_ui_explorer/server/: __init__.py  mcp_server.py
src/mcp_ui_explorer/services/: __init__.py  macro_player.py  macro_recorder.py  memory.py  ui_tars.py  verification.py
src/mcp_ui_explorer/utils/: __init__.py  coordinates.py  logging.py  system.py
tests/: demo_improved_screenshots.py  test_focus_default.py  test_manual_api.py  test_mcp_client.py  test_screenshot_filtering.py  test_ui_tars.py
tests/integration/: __init__.py  test_ui_explorer_integration.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_utils.py
